# emel

./: .gitignore  .gitmodules  CMakeLists.txt  emel.pro  emel.qbs
src/: CMakeLists.txt  ast.h  emel.qbs  emel_global.h  frontend-spirit.qbs  parser.cpp  parser.h  src.pro  src.qbs  tests.qbs  tokens.cpp  tokens.h
src/benchmarks/: CMakeLists.txt  bench-memory.cc  main.cc
src/emel/: CMakeLists.txt  ast.cc  ast.cpp  ast.h  compiler.cpp  compiler.h  emel_global.h  opcodes.cc  opcodes.cpp  opcodes.h  parser.cc  parser.cpp  parser.h  plugins.cc  plugins.cpp  plugins.h  semantic.cc  semantic.cpp  semantic.h  source-loader.cc  source-loader.h  source_loader.cpp  source_loader.h  symbol_table.h  tokens.cc  tokens.h
src/emel/bytecode/: bytecode.cpp  bytecode.h  codegen.cpp  codegen.h  const_pool_manager.cpp  const_pool_manager.h  insns_manager.cpp  insns_manager.h  symbols_manager.cpp  symbols_manager.h
src/emel/compiler/: codegen.cc  codegen.cpp  codegen.h  compiler.cc  compiler.cpp  compiler.h  const-pool-manager.cc  const-pool-manager.h  const_pool_manager.cpp  const_pool_manager.h  symbol_table.h
src/emel/memory/: gc.cc  gc.h  memory.cc  memory.h  pool.cc  pool.h
src/emel/runtime/: array.cc  array.cpp  array.h  interp.cc  interp.cpp  interp.h  object-data.cc  object-data.h  object.cc  object.cpp  object.h  string.cc  string.h
src/emel/spirit/: expressions.cpp  grammar.cpp  keywords.h  lex.h  skipper.cpp  values.h
src/emel/type-system/: context.cc  context.h  type-builtins.cc  type-builtins.h  type.cc  type.h
src/frontend-spirit/: CMakeLists.txt  error-handler.cc  error-handler.h  error_handler.cpp  error_handler.h  expressions.cc  expressions.cpp  expressions.h  grammar.cc  grammar.cpp  grammar.h  keywords.cc  keywords.h  lex.cc  lex.cpp  lex.h  position-handler.cc  position-handler.h  position_handler.cpp  position_handler.h  skipper.cc  skipper.h  spirit-parser.cc  spirit-parser.h  spirit_parser.cpp  spirit_parser.h  values.cc  values.cpp  values.h
src/gnu/: grammar.yy  tok.lex
src/spirit/: error_handler.cpp  error_handler.h  expressions.cpp  expressions.h  grammar.cpp  grammar.h  keywords.cpp  keywords.h  lex.cpp  lex.h  skipper.cpp  skipper.h  values.cpp  values.h
src/tests/: CMakeLists.txt  main.cc  main.cpp  test-compiler.cc  test-interp.cc  test-memory.cc  test-object.cc  test-opcodes.cc  test-parser.cc  test-string.cc  test_codegen.cpp  test_compiler.cpp  test_interp.cpp  test_object.cpp  test_opcodes.cpp  test_parser.cpp
src/tests/type-system/: test-context.cc  test-type-rep.cc
test-data/: EmelClass.emel  EmelClassBase.emel  Object.emel
tests/: test_parser.cpp  tests.pro  tests.qbs
